salesforce/force-app/main/default/objects/Case/fields/AI_Category__c.field-meta.xml
<CustomField>
    <fullName>AI_Category__c</fullName>
    <label>AI Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>