salesforce/force-app/main/default/objects/Case/fields/AI_Draft__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft__c</fullName>
    <label>AI Draft Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>