salesforce/force-app/main/default/objects/Case/fields/AI_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>AI_Needs_Review__c</fullName>
    <label>AI Needs Review</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>