salesforce/force-app/main/default/objects/Case/fields/AI_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>AI_Reasoning__c</fullName>
    <label>AI Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>