salesforce/force-app/main/default/objects/Case/fields/AI_Urgency__c.field-meta.xml
<CustomField>
    <fullName>AI_Urgency__c</fullName>
    <label>AI Urgency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>